--- a/CGCourse/CGCourse.vcxproj
+++ b/CGCourse/CGCourse.vcxproj
@@ -75,19 +75,29 @@
     <OutDir>$(SolutionDir)bin</OutDir>
     <IntDir>$(SolutionDir)bin-int</IntDir>
     <ReferencePath>$(ReferencePath)</ReferencePath>
-    <IncludePath>./source/module/LinearAlgebra;./source/module/Image;./source/module/;$(IncludePath)</IncludePath>
+    <IncludePath>.\source\module\;.\source\module\Image;.\source\module\LinearAlgebra;.\source\module\Random;$(IncludePath)</IncludePath>
+    <LibraryPath>./source/module/OpenGL/ThirdParty/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>./source/module/LinearAlgebra;./source/module/Image;./source/module/;$(IncludePath)</IncludePath>
+    <IncludePath>.\source\module\;.\source\module\Image;.\source\module\LinearAlgebra;.\source\module\Random;$(IncludePath)</IncludePath>
+    <LibraryPath>./source/module/OpenGL/ThirdParty/;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)bin</OutDir>
+    <IntDir>$(SolutionDir)bin-int</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>./source/module/LinearAlgebra;./source/module/Image;./source/module/;$(IncludePath)</IncludePath>
+    <IncludePath>.\source\module\;.\source\module\Image;.\source\module\LinearAlgebra;.\source\module\Random;$(IncludePath)</IncludePath>
+    <LibraryPath>./source/module/OpenGL/ThirdParty/;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)bin</OutDir>
+    <IntDir>$(SolutionDir)bin-int</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>./source/module/LinearAlgebra;./source/module/Image;./source/module/;$(IncludePath)</IncludePath>
+    <IncludePath>.\source\module\;.\source\module\Image;.\source\module\LinearAlgebra;.\source\module\Random;$(IncludePath)</IncludePath>
+    <LibraryPath>./source/module/OpenGL/ThirdParty/;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)bin</OutDir>
+    <IntDir>$(SolutionDir)bin-int</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -99,6 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glut32.lib;glut64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -115,6 +126,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glut32.lib;glut64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -127,6 +139,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glut32.lib;glut64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,20 +156,28 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glut32.lib;glut64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\course\assignment0.cpp" />
     <ClCompile Include="source\course\assignment0\IFS.cpp" />
     <ClCompile Include="source\course\assignment1.cpp" />
+    <ClCompile Include="source\course\assignment2.cpp" />
+    <ClCompile Include="source\course\assignment3.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\module\Image\image.cpp" />
     <ClCompile Include="source\module\LinearAlgebra\matrix.cpp" />
+    <ClCompile Include="source\module\OpenGL\Core\GLCanvas.cpp" />
     <ClCompile Include="source\module\Random\RandomModule.cpp" />
     <ClCompile Include="source\module\RayTracer\Core\Camera.cpp" />
+    <ClCompile Include="source\module\RayTracer\Core\light.cpp" />
     <ClCompile Include="source\module\RayTracer\Core\scene_parser.cpp" />
     <ClCompile Include="source\module\RayTracer\Primitives\Group.cpp" />
+    <ClCompile Include="source\module\RayTracer\Primitives\Plane.cpp" />
     <ClCompile Include="source\module\RayTracer\Primitives\Sphere.cpp" />
+    <ClCompile Include="source\module\RayTracer\Primitives\Transform.cpp" />
+    <ClCompile Include="source\module\RayTracer\Primitives\Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\course\assignment0\IFS.h" />
@@ -164,6 +185,8 @@
     <ClInclude Include="source\module\Image\image.h" />
     <ClInclude Include="source\module\LinearAlgebra\matrix.h" />
     <ClInclude Include="source\module\LinearAlgebra\vectors.h" />
+    <ClInclude Include="source\module\OpenGL\Core\GLCanvas.h" />
+    <ClInclude Include="source\module\OpenGL\ThirdParty\glut.h" />
     <ClInclude Include="source\module\Random\RandomModule.h" />
     <ClInclude Include="source\module\RayTracer\Core\Camera.h" />
     <ClInclude Include="source\module\RayTracer\Core\hit.h" />
@@ -178,6 +201,7 @@
     <ClInclude Include="source\module\RayTracer\Primitives\Transform.h" />
     <ClInclude Include="source\module\RayTracer\Primitives\Triangle.h" />
     <ClInclude Include="source\module\RayTracer\VersionControl.h" />
+    <ClInclude Include="source\Settings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
