--- a/CGCourse/CGCourse.vcxproj.filters
+++ b/CGCourse/CGCourse.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="source\course\assignment3.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="source\module\RayTracer\Core\material.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\module\Image\image.h">
