--- a/CGCourse/CGCourse.vcxproj
+++ b/CGCourse/CGCourse.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="source\course\assignment1.cpp" />
     <ClCompile Include="source\course\assignment2.cpp" />
     <ClCompile Include="source\course\assignment3.cpp" />
+    <ClCompile Include="source\course\assignment4.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\module\Image\image.cpp" />
     <ClCompile Include="source\module\LinearAlgebra\matrix.cpp" />
