--- a/CGCourse/CGCourse.vcxproj
+++ b/CGCourse/CGCourse.vcxproj
@@ -174,6 +174,8 @@
     <ClCompile Include="source\module\RayTracer\Core\Camera.cpp" />
     <ClCompile Include="source\module\RayTracer\Core\light.cpp" />
     <ClCompile Include="source\module\RayTracer\Core\material.cpp" />
+    <ClCompile Include="source\module\RayTracer\Core\RayTracer.cpp" />
+    <ClCompile Include="source\module\RayTracer\Core\RayTree.cpp" />
     <ClCompile Include="source\module\RayTracer\Core\scene_parser.cpp" />
     <ClCompile Include="source\module\RayTracer\Primitives\Group.cpp" />
     <ClCompile Include="source\module\RayTracer\Primitives\Plane.cpp" />
@@ -196,6 +198,8 @@
     <ClInclude Include="source\module\RayTracer\Core\material.h" />
     <ClInclude Include="source\module\RayTracer\Core\Object3D.h" />
     <ClInclude Include="source\module\RayTracer\Core\ray.h" />
+    <ClInclude Include="source\module\RayTracer\Core\RayTracer.h" />
+    <ClInclude Include="source\module\RayTracer\Core\RayTree.h" />
     <ClInclude Include="source\module\RayTracer\Core\scene_parser.h" />
     <ClInclude Include="source\module\RayTracer\Primitives\Group.h" />
     <ClInclude Include="source\module\RayTracer\Primitives\Plane.h" />
